--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prepublish": "babel src --out-dir dist",
     "lint": "eslint .",
-    "tape": "babel-tape-runner 'test/*.js' | tap-spec",
+    "tape": "babel-tape-runner 'test/*.js' | tap-difflet",
     "test": "npm run lint && npm run tape"
   },
   "repository": {
@@ -35,6 +35,7 @@
     "babel-eslint": "^4.0.10",
     "babel-tape-runner": "^1.2.0",
     "eslint": "^1.2.1",
+    "tap-difflet": "^0.3.0",
     "tap-spec": "^4.1.0",
     "tape": "^4.2.0"
   },
