--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "prepublish": "babel src --out-dir dist",
-    "lint": "eslint .",
+    "lint": "eslint ./src",
     "tape": "babel-tape-runner 'test/*.js' | tap-difflet",
     "test": "npm run lint && npm run tape"
   },
@@ -36,7 +36,6 @@
     "babel-eslint": "^4.0.10",
     "babel-tape-runner": "^1.2.0",
     "eslint": "^1.2.1",
-    "eslint-config-airbnb": "0.0.8",
     "tap-difflet": "^0.3.0",
     "tap-spec": "^4.1.0",
     "tape": "^4.2.0"
