--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "babel-tape-runner": "^1.2.0",
     "eslint": "^1.2.1",
     "tap-difflet": "^0.3.0",
-    "tap-spec": "^4.1.0",
-    "tape": "^4.2.0"
+    "tap-spec": "^4.1.0"
   },
   "dependencies": {
-    "postcss": "^5.0.4"
+    "postcss": "^5.0.4",
+    "postcss-js": "^0.1.1"
   }
 }
