--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "eslint": "^1.2.1",
     "husky": "^0.10.2",
     "tap-difflet": "^0.3.0",
-    "tap-spec": "^4.1.0"
+    "tap-spec": "^4.1.0",
+    "tape": "^4.4.0"
   },
   "dependencies": {
     "postcss": "^5.0.4",
