--- a/package.json
+++ b/package.json
@@ -34,14 +34,14 @@
   "devDependencies": {
     "ava": "^0.9.1",
     "babel-cli": "^6.4.0",
-    "babel-eslint": "^4.1.1",
+    "babel-eslint": "^5.0.0-beta6",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.3.13",
     "eslint": "^1.2.1",
     "husky": "^0.10.2"
   },
   "dependencies": {
-    "postcss": "^5.0.4",
+    "postcss": "^5.0.14",
     "postcss-js": "^0.1.1"
   },
   "ava": {
