--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "prepublish": "babel src --out-dir dist",
-    "lint": "eslint ./src",
+    "lint": "eslint ./src ./test",
     "test": "npm run lint && ava",
     "precommit": "npm test"
   },
