--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "prepublish": "babel src --out-dir dist",
     "lint": "eslint ./src ./test",
-    "test": "npm run lint && ava",
+    "test": "npm run lint && mocha --compilers js:babel-register",
+    "test-dev": "mocha -w --compilers js:babel-register",
     "precommit": "npm test"
   },
   "repository": {
@@ -32,23 +33,16 @@
   },
   "homepage": "https://github.com/maximkoretskiy/postcss-reset",
   "devDependencies": {
-    "ava": "^0.9.1",
     "babel-cli": "^6.4.0",
     "babel-eslint": "^5.0.0-beta6",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.3.13",
     "eslint": "^1.2.1",
-    "husky": "^0.10.2"
+    "husky": "^0.10.2",
+    "mocha": "^2.3.4"
   },
   "dependencies": {
     "postcss": "^5.0.14",
     "postcss-js": "^0.1.1"
-  },
-  "ava": {
-    "files": [
-      "test/ava.js"
-    ],
-    "failFast": true,
-    "verbose": true
   }
 }
