--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "babel-cli": "^6.4.0",
     "babel-eslint": "^5.0.0-beta6",
+    "babel-plugin-transform-es2015-modules-umd": "^6.4.3",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.3.13",
     "eslint": "^1.2.1",
