--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "PostCSS plugin for partial styles reset",
   "main": "dist/index.js",
   "scripts": {
-    "prepublish": "babel src --out-dir dist",
+    "prepublish": "npm run build",
+    "build": "babel src --out-dir dist",
     "lint": "eslint ./src ./test",
-    "test": "npm run lint && mocha --compilers js:babel-register",
-    "test-dev": "mocha -w --compilers js:babel-register",
+    "test": "npm run lint && npm run test-unit && npm run test-integration",
+    "test-unit": "mocha --compilers es6:babel-register test/index.es6",
+    "test-integration": "npm run build && mocha test/integration.js",
+    "test-dev": "mocha -w --compilers es6:babel-register test/index.es6",
     "precommit": "npm test"
   },
   "repository": {
@@ -35,7 +38,7 @@
   "devDependencies": {
     "babel-cli": "^6.4.0",
     "babel-eslint": "^5.0.0-beta6",
-    "babel-plugin-transform-es2015-modules-umd": "^6.4.3",
+    "babel-plugin-add-module-exports": "^0.1.2",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.3.13",
     "eslint": "^1.2.1",
