--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
   "homepage": "https://github.com/maximkoretskiy/postcss-reset",
   "devDependencies": {
     "babel-cli": "^6.4.0",
-    "babel-eslint": "^5.0.0-beta6",
-    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-eslint": "^7.2.3",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.3.13",
-    "eslint": "^1.2.1",
-    "husky": "^0.10.2",
-    "mocha": "^2.3.4"
+    "eslint": "^3.19.0",
+    "husky": "^0.13.4",
+    "mocha": "^3.4.2"
   },
   "dependencies": {
     "postcss": "^5.0.14",
