--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "prepublish": "npm run build",
     "build": "babel src --out-dir dist",
-    "lint": "eslint ./src ./test",
+    "lint": "eslint 'src/*.es6' 'test/*.es6'",
     "test": "npm run lint && npm run test-unit && npm run test-integration",
-    "test-unit": "mocha --compilers es6:babel-register test/index.es6",
+    "test-unit": "mocha --require babel-register test/index.es6",
     "test-integration": "npm run build && mocha test/integration.js",
-    "test-dev": "mocha -w --compilers es6:babel-register test/index.es6",
+    "test-dev": "mocha -w --require babel-register test/index.es6",
     "precommit": "npm test"
   },
   "repository": {
@@ -41,9 +41,9 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.3.13",
-    "eslint": "^3.19.0",
-    "husky": "^0.13.4",
-    "mocha": "^3.4.2"
+    "eslint": "^7.10.0",
+    "husky": "^4.3.0",
+    "mocha": "^8.1.3"
   },
   "dependencies": {
     "postcss": "^6.0.1",
