--- a/package.json
+++ b/package.json
@@ -33,14 +33,20 @@
   },
   "homepage": "https://github.com/maximkoretskiy/postcss-reset",
   "dependencies": {
-    "postcss": "^6.0.1",
-    "postcss-js": "^1.0.0"
+    "postcss-js": "^3.0.1"
   },
   "devDependencies": {
     "eslint": "^7.10.0",
     "eslint-plugin-mocha": "^8.0.0",
     "husky": "^4.3.0",
-    "mocha": "^8.1.3"
+    "mocha": "^8.1.3",
+    "postcss": "^8.1.1"
+  },
+  "peerDependency": {
+    "postcss": "^8.1.1"
+  },
+  "optionalPeerDependencies": {
+    "postcss-js": "^3.0.1"
   },
   "eslintConfig": {
     "parserOptions": {
