--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postcss-autoreset",
-  "version": "2.0.2",
+  "version": "3.0.0",
   "description": "PostCSS plugin for partial styles reset",
   "main": "dist/index.js",
   "scripts": {
@@ -36,6 +36,7 @@
     "postcss-js": "^3.0.1"
   },
   "devDependencies": {
+    "clean-publish": "^1.1.8",
     "eslint": "^7.10.0",
     "eslint-plugin-mocha": "^8.0.0",
     "husky": "^4.3.0",
